service-ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-lb
  namespace: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  type: NodePort
  ports:
  - name: http-1
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    protocol: TCP
    port: 443
    targetPort:  443
    nodePort: 30443
  - name: http-2
    protocol: TCP
    port: 8080
    targetPort:  8080
    nodePort: 30880
